dev agent terminou a story 1.2, mas tenho certeza que cagou tudo. Agora é trabalhar com o QA.

--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "httpx>=0.24.0",
     "cnpj-cpf-validator>=0.1.2",
     "asyncpg>=0.30.0",
+    "email-validator>=2.2.0",
 ]
 
 [project.optional-dependencies]
