--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -39,7 +39,8 @@ dev = [
     "httpx>=0.24.0",
     "ruff>=0.1.0",
     "mypy>=1.5.0",
-    "pre-commit>=3.4.0"
+    "pre-commit>=3.4.0",
+    "aiosqlite>=0.19.0"
 ]
 
 [build-system]
@@ -111,6 +112,7 @@ filterwarnings = [
 
 [dependency-groups]
 dev = [
+    "aiosqlite>=0.21.0",
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
     "pytest-cov>=6.2.1",
